# HomeStockAI

./: .gitignore  AGENTS.md  docker-compose.yml  package-lock.json  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-product-skeleton-household-setup/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/phases/02-records-inventory-baseline/: 02-01-PLAN.md  (+11 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase1_schema.py  0002_phase2_purchase_records.py  0003_phase2_inventory_states.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: __init__.py  auth.py  household.py  items.py  purchase_records.py
apps/api/app/core/: config.py  database.py  session.py
apps/api/app/domain/: inventory_defaults.py  item_catalog.py  order_text_parser.py
apps/api/app/models/: __init__.py  account.py  household.py  household_item.py  inventory_state.py  purchase_record.py  registry.py
apps/api/app/schemas/: auth.py  household.py  inventory.py  item.py  purchase_record.py
apps/api/app/services/: inventory_estimator.py
apps/api/scripts/: seed_phase1.py
apps/web/: components.json  package.json  tsconfig.json
apps/worker/: pyproject.toml
apps/worker/worker/: __init__.py  celery_app.py
(+35 files in other folders)
