[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refillwise-api"
version = "0.1.0"
description = "RefillWise FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.1",
  "fastapi>=0.115.12",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.7",
  "pydantic-settings>=2.8.1",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
