[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refillwise-worker"
version = "0.1.0"
description = "RefillWise Celery worker"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0",
  "redis>=5.2.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
